--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
   },
   "editor.formatOnSave": true,
   "rubyLsp.rubyVersionManager": {
-    "identifier": "asdf"
+    "identifier": "auto"
   },
   "files.trimTrailingWhitespace": true,
   "files.insertFinalNewline": true,
